angular skelton added

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,17 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  div(ng-controller='AppCtrl')
+    h1= title
+    p Welcome to #{title}
+    
+    div(ng-view)
+    
+    
+
+  script(src='javascripts/lib/angular.js')
+  script(src='javascripts/app.js')
+  script(src='javascripts/services.js')
+  script(src='javascripts/controllers.js')
+  script(src='javascripts/filters.js')
+  script(src='javascripts/directives.js')
