--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,6 +1,8 @@
 doctype 5
-html
+html(ng-app="jsDigit")
   head
+    meta(charset='utf8')
+    base(href='/')
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
