--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,8 @@ block content
   div(ng-controller='AppCtrl')
     h1= title
     p Welcome to #{title}
-    
+      a(href='home') home
+      a(href='admin') admin
     div(ng-view)
     
     
