--- a/views/index.jade
+++ b/views/index.jade
@@ -6,6 +6,7 @@ block content
     p Welcome to #{title}
       a(href='home') home
       a(href='admin') admin
+      button(ng-click='logout()') logout
     div(ng-view)
     
     
